argocd/argo-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: 'argo.127.0.0.1.nip.io'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
                  # or name: https
